Remove .html in resume href.

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     <section>
       <h2>Contact</h2>
       <ul>
-        <li>Resumé: <a href="resume.html">Webpage</a></li>
+        <li>Resumé: <a href="resume">Webpage</a></li>
         <li>GitHub: <a href="https://github.com/acedron">acedron</a></li>
         <li>GitLab: <a href="https://gitlab.com/acedron">acedron</a></li>
         <li>Twitter: <a href="https://twitter.com/acedrons">@acedrons</a></li>
