Change egawari link.

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         </li>
         <li>
           <h3>
-            <a href="https://github.com/acedron/egawari">egawari</a> (C, Linux)
+            <a href="https://github.com/egawari">egawari</a> (C, Linux)
           </h3>
           <p>
             <ul>
