--- a/resume.html
+++ b/resume.html
@@ -88,7 +88,7 @@
         </ul>
       </section>
       <section>
-        <h3><a href="https://github.com/acedron/egawari">egawari</a>
+        <h3><a href="https://github.com/egawari">egawari</a>
           ＊ Touchpad Input Client for GNU/Linux (C, Linux)</h3>
         <ul>
           <li>Makes your touchpad work like a tablet on GNU/Linux.</li>
