Change egawari URL.

--- a/index.html
+++ b/index.html
@@ -44,12 +44,14 @@
       <ul>
         <li>
           <h3>
-            <a href="https://github.com/acedron/abstouch-nux">abstouch-nux</a> (C, Linux)
+            <a href="https://github.com/acedron/egawari">egawari</a> (C, Linux)
           </h3>
           <p>
             <ul>
-              <li>An absolute touchpad input client for GNU/Linux.</li>
-              <li>Inspired by <a href="https://github.com/apsun/AbsoluteTouchEx">apsun/AbsoluteTouchEx</a>. Make sure to check his repository, especially if you use Windows!</li>
+              <li>Makes your touchpad work like a tablet.</li>
+              <li>Only on GNU/Linux for now.</li>
+              <li>Rewrite of <a href="https://github.com/acedron/abstouch-nux">abstouch-nux</a>, aiming to provide more features and compatibility.</li>
+              <li>Work in progress.</li>
             </ul>
           </p>
         </li>
@@ -65,34 +67,12 @@
         </li>
         <li>
           <h3>
-            <a href="https://github.com/acedron/sekai">Sekai</a> (Node, discord.js)
+            <a href="https://github.com/acedron/abstouch-nux">abstouch-nux</a> (C, Linux)
           </h3>
           <p>
             <ul>
-              <li>A multipurpose Discord bot.</li>
-            </ul>
-          </p>
-        </li>
-        <li>
-          <h3>
-            <a href="https://acedron.itch.io/hedronic-legends">Hedronic Legends</a> (Godot, C#)
-          </h3>
-          <p>
-            <ul>
-              <li>An Adventure / Role Playing Game that aims to provide advanced gameplay and mechanics.</li>
-              <li>It is currently under the prototype development stage and the fate of the project is unknown.</li>
-            </ul>
-          </p>
-        </li>
-        <li>
-          <h3>
-            <a href="https://github.com/egawari">egawari</a> (C, Linux)
-          </h3>
-          <p>
-            <ul>
-              <li>Makes your touchpad work like a tablet on GNU/Linux.</li>
-              <li>Rewrite of <a href="https://github.com/acedron/abstouch-nux">abstouch-nux</a>, aiming to provide more features and compatibility.</li>
-              <li>Work in progress.</li>
+              <li>An absolute touchpad input client for GNU/Linux.</li>
+              <li>Inspired by <a href="https://github.com/apsun/AbsoluteTouchEx">apsun/AbsoluteTouchEx</a>. Make sure to check his repository, especially if you use Windows!</li>
             </ul>
           </p>
         </li>
