--- a/resume.html
+++ b/resume.html
@@ -39,7 +39,7 @@
     <section>
       <h2>Skills</h2>
       <ul>
-        <li>Languages: C, C++, JavaScript / TypeScript, Python, C#, Bash</li>
+        <li>Languages: C, C++, JavaScript / TypeScript, Python, C#, Rust, Bash</li>
         <li>Environments: GNU / Linux</li>
         <li>Areas of interest: system development, app development</li>
       </ul>
@@ -54,12 +54,13 @@
     <section>
       <h2>Projects</h2>
       <section>
-        <h3><a href="https://github.com/acedron/abstouch-nux">abstouch-nux</a>
-          ＊ Absolute Input Client for Linux (C, Linux)</h3>
+        <h3><a href="https://github.com/acedron/egawari">egawari</a>
+          ＊ Touchpad Input Client (C, Linux)</h3>
         <ul>
-          <li>Takes the absolute input from touchpad and warps the pointer using Xlib on X11.</li>
-          <li>Has calibration and display configurations.</li>
-          <li>Inspired by <a href="https://github.com/apsun/AbsoluteTouchEx">apsun/AbsoluteTouchEx</a>.</li>
+          <li>Makes your touchpad work like a tablet.</li>
+          <li>Only on GNU/Linux for now.</li>
+          <li>Rewrite of <a href="https://github.com/acedron/abstouch-nux">abstouch-nux</a>, aiming to provide more features and compatibility.</li>
+          <li>Work in progress.</li>
         </ul>
       </section>
       <section>
@@ -71,29 +72,21 @@
         </ul>
       </section>
       <section>
+        <h3><a href="https://github.com/acedron/abstouch-nux">abstouch-nux</a>
+          ＊ Absolute Input Client for Linux (C, Linux)</h3>
+        <ul>
+          <li>Takes the absolute input from touchpad and warps the pointer using Xlib on X11.</li>
+          <li>Has calibration and display configurations.</li>
+          <li>Inspired by <a href="https://github.com/apsun/AbsoluteTouchEx">apsun/AbsoluteTouchEx</a>.</li>
+        </ul>
+      </section>
+      <section>
         <h3><a href="https://github.com/acedron/sekai">Sekai</a>
           ＊ Basic Multipurpose Discord Bot (NodeJS, discord.js)</h3>
         <ul>
           <li>It can show basic information about osu! players and Discord users.</li>
           <li>It can manage roles using autoroles and issue basic moderation cases.</li>
           <li>It can log basic actions and moderation cases.</li>
-        </ul>
-      </section>
-      <section>
-        <h3><a href="https://acedron.itch.io/hedronic-legends">Hedronic Legends</a>
-          ＊ A Gameplay Focused RPG (Godot, C#)</h3>
-        <ul>
-          <li>It is currently under the prototype development stage and the fate of the project is unknown.</li>
-          <li>Closed source.</li>
-        </ul>
-      </section>
-      <section>
-        <h3><a href="https://github.com/egawari">egawari</a>
-          ＊ Touchpad Input Client for GNU/Linux (C, Linux)</h3>
-        <ul>
-          <li>Makes your touchpad work like a tablet on GNU/Linux.</li>
-          <li>Rewrite of <a href="https://github.com/acedron/abstouch-nux">abstouch-nux</a>, aiming to provide more features and compatibility.</li>
-          <li>Work in progress.</li>
         </ul>
       </section>
     </section>
